# aai-anki-speedrun

./: .gitignore  AGENTS.md  README.md
.cursor/rules/: add-backend-rpc.mdc  factory-lane-worker.mdc  proof-and-eval-tooling.mdc
anki/: justfile
anki/proto/anki/: deck_config.proto  speedrun.proto
anki/pylib/tests/: test_speedrun.py  test_speedrun_focus.py  test_speedrun_ingest.py  test_speedrun_performance.py  test_speedrun_qbank.py  test_speedrun_relink.py  test_speedrun_review_loop.py
anki/qt/aqt/: main.py  mediasrv.py  speedrun.py  webview.py
anki/qt/tests/: test_speedrun_onboarding.py
anki/rslib/benches/: benchmark.rs
anki/rslib/src/speedrun/: attempts.rs  bench.rs  coverage.rs  daily.rs  focus.rs  mastery.rs  mod.rs  next_action.rs  performance.rs  qbank.rs  relink.rs  score.rs  (+2 more)
docs/: PRD.md  UI-OVERHAUL-HANDOFF.md  brainlift_v1.md  codebase_notes.md  factory_workflow.md  feature_ledger.md  project_guidelines.md  review_workflow.md  skills.md  tech_stack.md  wednesday_plan.md  wednesday_remaining_plan.md
mobile/: .gitignore  README.md
mobile/ios/: Package.swift  RUNBOOK.md  build-xcframework.sh  project.yml
mobile/ios/App/: SpeedrunApp.swift
mobile/ios/Speedrun.xcodeproj/: project.pbxproj
mobile/speedrun-ffi/: Cargo.toml  rust-toolchain.toml
mobile/speedrun-ffi/.cargo/: config.toml
mobile/speedrun-ffi/include/: module.modulemap  speedrun_ffi.h
mobile/speedrun-ffi/src/: lib.rs
mobile/speedrun-ffi/tests/: review_loop.rs
proof/wednesday/: BENCH.md  INSTALLER.md  PROOF.md  README.md  feature_proof.py  review_loop_demo.py  seed_in_app.py
proof/wednesday/linux/: Dockerfile.build  Dockerfile.clean  README.md  build_and_verify.sh
proof/wednesday/logs/: commit.txt  feature_proof.txt
(+55 files in other folders)
